<?xml version="1.0"?>
<package>
  <name>trac_ik_test</name>
  <version>1.5.1</version>
  <description> This package contains the source code for testing trac_ik</description>
  <author>Honghao Lv</author>
  <maintainer email="lvhonghao@zju.edu.cn">Honghao Lv</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>xacro</run_depend>
</package>
